# sp-exercises

./: CMakeLists.txt
Concurrency/: .clang-tidy  CMakeLists.txt  README.md
Concurrency/include/: digits.hpp  mtqueue.hpp  performance.hpp  power.hpp  stringsort.hpp  tables.hpp  tpool.hpp
Concurrency/src/: CMakeLists.txt  digits_bm.cpp  digits_test.cpp  futures.cpp  mtqueue.cpp  stringsort.cpp
Concurrency/tests/: CMakeLists.txt  mtqueue_bm.cpp  stringsort0_bm.cpp  stringsort1_bm.cpp  stringsort2_bm.cpp  stringsort3_bm.cpp  stringsort4_bm.cpp  stringsort_test.cpp
Coroutines/: CMakeLists.txt  README.md  coroutines.cpp  libcoro.cmake
DSEL-calc/: AST.hpp  CMakeLists.txt  README.md  calculator.cpp  calculator_test.cpp  expr.cpp  expr.hpp  listing.aux  listing.tex  main.cpp  op.hpp  sanitizers.cmake  state.hpp  symbol_table.hpp  term.hpp
Lambdas/: .clang-tidy  CMakeLists.txt  README.md  benchmark.cmake
Lambdas/src/: CMakeLists.txt  lambda-puzzle1.cpp  lambda-puzzle2.cpp  lambda-puzzle3.cpp  lambda_api.cpp  visitor.cpp
StaticVisitor/: .clang-tidy  CMakeLists.txt  README.md  listing.aux  listing.tex
StaticVisitor/include/: json_input.hpp  json_output.hpp  meta.hpp
StaticVisitor/src/: CMakeLists.txt  data.hpp  json_input_test.cpp  json_output_test.cpp  meta_test.cpp
Templates/: README.md
Templates/include/: fibonacci.hpp  type_name.hpp
Templates/src/: CMakeLists.txt  kindof_test.cpp  type_name_test.cpp
extended1-template/: .gitignore  CMakeLists.txt  README.md  gtest.cmake  latex-code (2).sh  listing.aux  listing.tex  main.cpp  number_series.cpp  number_series.hpp  number_series_bm.cpp  number_series_test.cpp  sort_bm.cpp
session-1/: CMakeLists.txt  main.cpp
session-3/: CMakeLists.txt  main.cpp
session-4/: CMakeLists.txt  Point.hpp  PolyLine.hpp  main.cpp
session-7/: CMakeLists.txt  main.cpp
session-9/: CMakeLists.txt  impl.hpp  move-exercise.cpp
template/: CMakeLists.txt
template-mine/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  release.sh
template-mine/include/: power.hpp
template-mine/src/: CMakeLists.txt  deduction.cpp  fibonacci_test.cpp  kindof_test.cpp  power_test.cpp  prime_check.cpp
template/src/: fibonacci_test.cpp  kindof_test.cpp  power_test.cpp  type_name_boost.cpp  type_name_test.cpp
test/: CMakeLists.txt  test.cpp
